<resources>
    <string name="app_name">ClubHouse</string>
    <!--        common Error messages       -->
    <string name="network_error">Please check your internet connection or try again later</string>
    <string name="unknown_error">Something went wrong, Please try later</string>
    <string name="not_found">Not found, Please try later</string>
    <string name="service_error">Server error, Please try later</string>
    <string name="server_unavailable">Server unavailable, Please try later</string>
    <string name="unauthorized_error">user unauthorized</string>
    <string name="access_denied">Access denied</string>
    <string name="retry">Retry</string>
    <!--        Login       -->
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone">Enter your phone #</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="sms_code">Code from SMS</string>
    <string name="resend_code_message">Did not receive it?</string>
    <string name="resend_code_button">Tap to resend</string>
    <string name="warning">Warning!</string>
    <string name="warning_text">This is an <b>unofficial</b> app. Using this might get your Clubhouse account permanently banned. Proceed at your own risk.</string>
    <string name="i_understand">I understand</string>
    <string name="select_country_title">Select Country</string>
    <string name="search_hint">Search</string>
    <string name="empty_result">Empty result</string>
    <string name="code_from_sms">Code from SMS</string>
    <string name="next">Next</string>
    <string name="resend_code">Resend code</string>
    <string name="waitlist_text">You\'re waiting for someone to invite you to Clubhouse. Your account is currently inactive.</string>
    <string name="logout">Logout</string>
    <string name="welcome_message">Welcome to club house %s</string>


</resources>
