<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.verificationcode.VerificationCodeFragment">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24x"
        android:layout_marginTop="@dimen/space_24x"
        android:background="@color/transparent"
        android:gravity="center"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/codeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_64x"
        android:text="@string/enter_verification_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/verificationCodeInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_48x"
        android:layout_marginStart="@dimen/space_32x"
        android:layout_marginTop="@dimen/space_48x"
        android:layout_marginEnd="@dimen/space_32x"
        android:background="@drawable/phone_background"
        android:gravity="center"
        android:hint="@string/code_from_sms"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="@dimen/font_16x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeLabel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resendCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_16x"
        android:text="@string/resend_code_message"
        android:textSize="@dimen/font_16x"
        app:layout_constraintBottom_toBottomOf="@id/resendCodeBtn"
        app:layout_constraintEnd_toStartOf="@id/resendCodeBtn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/verificationCodeInput"
        app:layout_constraintTop_toTopOf="@id/resendCodeBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resendCodeBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8x"
        android:text="@string/resend_code"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/verificationCodeInput"
        app:layout_constraintStart_toEndOf="@id/resendCodeLabel"
        app:layout_constraintTop_toBottomOf="@id/verificationCodeInput"
        app:rippleColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32x"
        android:paddingStart="@dimen/space_48x"
        android:paddingEnd="@dimen/space_48x"
        android:text="@string/next"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="@dimen/space_24x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resendCodeBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>