<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.country.CountryPickerFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selectCountryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16x"
        android:text="@string/select_country_title"
        android:textSize="@dimen/font_24x"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/searchCountryInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchCountryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phone_background"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/space_16x"
        android:textColorHint="?attr/colorControlHighlight"
        android:textSize="@dimen/font_16x"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/countriesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectCountryTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/countriesList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_16x"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchCountryInput"
        tools:listitem="@layout/item_country" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emptyResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_result"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchCountryInput" />
</androidx.constraintlayout.widget.ConstraintLayout>