<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_64x"
        android:text="@string/enter_your_phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_48x"
        android:layout_marginStart="@dimen/font_32x"
        android:layout_marginTop="@dimen/space_48x"
        android:layout_marginEnd="@dimen/font_32x"
        android:background="@drawable/phone_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneLabel">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/countryCodeBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            app:iconTint="@color/transparent"
            app:iconTintMode="add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/phoneNumberTxt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberTxt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_8x"
            android:background="@drawable/phone_background"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="@dimen/font_16x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/countryCodeBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32x"
        android:paddingStart="@dimen/space_48x"
        android:paddingEnd="@dimen/space_48x"
        android:text="@string/next"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="@dimen/space_24x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>